# homo-os

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  ifup.sh  solve.py  west.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run-cmake.yml  run-docker.yml
.west/: config
app/: CMakeLists.txt  flag  prj.conf  prj.conf.prod  sections-rom.ld  west.yml
app/fe/: index.html  package-lock.json  package.json  stats.html  tailwind.config.ts  vite.config.ts
app/fe/client/: index.html
app/fe/client/src/: index.css
app/fe/client/src/components/: contact-section.tsx  footer.tsx  gallery-section.tsx  hero-section.tsx  menu-section.tsx  navigation.tsx  reservation-section.tsx
app/fe/client/src/lib/: meme-data.ts  sounds.ts
app/fe/client/src/pages/: home.tsx
app/homo-fs/: CMakeLists.txt  example.c  homo_pack.c
app/homo-fs/lib/: CMakeLists.txt  homofs.c  homofs.h  homofs_data.c  homofs_data.h  queue.h
app/script/: enc_flag.py  gen_gz_fs.py  mod_section.py
app/src/: chacha20.c  chacha20.h  decode_data.c  main.c  rc4.c
app/src/drivers/: homo_fs.c  homo_fs.h
src/: main.c
src/bsp/cortex_m3/: sample_threadx.ld  tx_initialize_low_level.S
src/bsp/cortex_m3/ans385/: ldscripts.ld  tx_initialize_low_level.S
src/bsp/drivers/: cmsdk_uart.c  cmsdk_uart.h
src/crt/: init.c  memory.c  standard_io.c  良い世、こいよ.c
src/crt/ans385/: standard_io.c
toolchains/: ans385.cmake  cortex_m3.cmake
